fixed scaling size for tile search results, spacing

--- a/src/style/components/_ListContainer.scss
+++ b/src/style/components/_ListContainer.scss
@@ -50,6 +50,16 @@
           transform: translateX(300%);
         }
       }
+
+      @media (min-height: 1200px) {
+        width: 150px;
+        height: 150px;
+
+        .tilt-button {
+          width: 150px;
+        height: 150px;
+        }
+      }
     }
 
     &.tiles-container {
@@ -58,6 +68,10 @@
       & > * {
         margin: 10px;
       }
+    }
+
+    @media (min-height: 1200px) {
+      align-items: center;
     }
   }
   .list-controller {
